# Escultor3d-Parte2

./: .gitignore  CMakeLists.txt  CutBox.cpp  CutBox.h  CutEllipsoid.cpp  CutEllipsoid.h  CutSphere.cpp  CutSphere.h  CutVoxel.cpp  CutVoxel.h  FiguraGeometrica.cpp  FiguraGeometrica.h  Kirby.txt  PutBox.cpp  PutBox.h  PutEllipsoid.cpp  PutEllipsoid.h  PutSphere.cpp  PutSphere.h  PutVoxel.cpp  PutVoxel.h  README.md  Sculptor.cpp  Sculptor.h  atualizar_data.sh  cutVoxel.cpp  cutvoxel.h  figura.txt  main  main.cpp
